# BMSTU-IU7-CG-LABS

./: .gitignore  README.md
lab_01/: CMakeLists.txt
lab_01/inc/: mainwindow.h  point.h  triangle.h
lab_01/src/: main.cpp  mainwindow.cpp  point.cpp  triangle.cpp
lab_01/views/: mainwindow.ui
lab_02/: CMakeLists.txt
lab_02/forms/: mainwindow.ui
lab_02/inc/: graphicsmanager.h  mainwindow.h
lab_02/src/: graphicsmanager.cpp  mainwindow.cpp
lab_03/: CMakeLists.txt  readme.md
lab_03/forms/: mainwindow.ui
lab_03/inc/: linedrawer.h  mainwindow.h
lab_03/src/: linedrawer.cpp  mainwindow.cpp
lab_04/: CMakeLists.txt
lab_04/forms/: mainwindow.ui
lab_04/inc/: circledrawer.h  ellipsedrawer.h  mainwindow.h
lab_04/src/: circledrawer.cpp  ellipsedrawer.cpp  mainwindow.cpp
lab_05/: CMakeLists.txt
lab_05/forms/: mainwindow.ui
lab_05/inc/: edge.h  filled_polygon.h  mainwindow.h
lab_05/src/: edge.cpp  filled_polygon.cpp  mainwindow.cpp
lab_06/: CMakeLists.txt
lab_06/forms/: mainwindow.ui
lab_06/inc/: drawer.h  figure.h  mainwindow.h  scanline_seed_fill.h
lab_06/src/: drawer.cpp  figure.cpp  mainwindow.cpp  scanline_seed_fill.cpp
lab_07/: CMakeLists.txt
lab_07/forms/: mainwindow.ui
lab_07/inc/: clipper_rectangle.h  clipper_shape.h  drawer.h  line_segment.h  mainwindow.h
lab_07/src/: clipper.cpp  clipper_rectangle.cpp  drawer.cpp  mainwindow.cpp
lab_08/: CMakeLists.txt
lab_08/forms/: mainwindow.ui
lab_08/inc/: clipper.h  clipper_polygon.h  clipper_shape.h  drawer.h  mainwindow.h
lab_08/src/: clipper_polygon.cpp  drawer.cpp  line_segment.cpp  mainwindow.cpp
test/inc/: mainwindow.h
